Remove -r option from sed for osx compat. Clean up seds